Implement endpoint getEndpointsInfo in API
